Import localisations from Crowdin

--- a/Vienna/Interfaces/mul.lproj/MainMenu.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/MainMenu.xcstrings
@@ -15344,7 +15344,7 @@
         "nl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Indexeer databank opnieuw"
+            "value" : "Indexeer database opnieuw"
           }
         },
         "pt-BR" : {
