Import localisations from Crowdin

--- a/Vienna Help/Resources/InfoPlist.xcstrings
+++ b/Vienna Help/Resources/InfoPlist.xcstrings
@@ -11,6 +11,12 @@
             "value" : "Vienna Help"
           }
         },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ayuda de Vienna"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
