--- a/Vienna/Interfaces/mul.lproj/FeedCredentials.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/FeedCredentials.xcstrings
@@ -782,7 +782,7 @@
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно"
+            "value" : "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно."
           }
         },
         "sv" : {
@@ -965,6 +965,12 @@
             "value" : "Pormenores"
           }
         },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Детали"
+          }
+        },
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
@@ -1029,6 +1035,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Fluxo:"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Лента:"
           }
         },
         "sv" : {
